--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Manipulation du DOM</title>
-  <style>
-    #maDiv {
-      background-color: lightblue;
-      text-align: center;
-      padding: 20px;
-      cursor: pointer;
-    }
-  </style>
+  <title>Formulaire de contact</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <script src="script.js"></script>
+  <h1>Contactez-nous</h1>
+  <form action="reponse.php" method="POST">
+    <label>Nom : <input type="text" name="nom" required></label><br>
+    <label>Prénom : <input type="text" name="prenom" required></label><br>
+    <label>Email : <input type="email" name="email" required></label><br>
+    <label>Message : <textarea name="message" required></textarea></label><br>
+    <button type="submit">Envoyer</button>
+  </form>
 </body>
 </html>
